@@ -12,9 +12,14 @@ class PlaceSearchServiceTests {
     var results = service.search("카페", "1", "101");
 
     assertThat(results).hasSize(3);
-    assertThat(results.getFirst())
+    assertThat(results.get(0))
       .containsEntry("category", "cafe")
-      .containsEntry("canAddCandidate", true);
+      .containsEntry("canAddCandidate", true)
+      .containsEntry("source", "dev-mock")
+      .containsEntry("myHearted", false)
+      .containsEntry("lat", 37.5665)
+      .containsEntry("lng", 126.9780);
+    assertThat(results.getFirst()).containsKey("heartCount");
     assertThat(results.getFirst()).doesNotContainKeys("sco" + "re", "risk" + "Label", "risk" + "Tone");
   }
 }
